# enzo-e

./: .clang-format  .clang-format-ignore  .git-blame-ignore-revs  .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yaml  BRANCHES  CELLO_LICENSE  CMakeLists.txt  FUNDING  LICENSE_ATHENAPP  LICENSE_CELLO  LICENSE_ENZO  LICENSE_PPML  Makefile  README.md  REVISIONS  SConstruct  SConstruct.all  SConstruct.linux  SConstruct.linux-ampi  SConstruct.linux-mpi  SConstruct.ncsa-bluedrop  SConstruct.triton  auto_config.def.in  build.sh  build_log.txt  cello.css  cello.dot  cello.planner  classes.org  compile  compile.sh  conf.py  config_linux_gnu.py  config_ncsa_bw.py  config_triton_gnu.py  config_triton_intel.py  (+37 more)
src/: 0.C  0.cpp  0.hpp  CMakeLists.txt  Doxyfile  Doxyfile-html  Doxyfile-latex  Doxyfile-xml  Make.common  Make.include  Make.include.bordner-krummhorn  Make.include.bordner-nordlys  Make.include.sdsc-datastar  Make.mach.bordner-nordlys  Make.mach.sdsc-datastar  Makefile  PARAMETERS  SConscript  TEMPLATE.cpp  TEMPLATE.dir  TEMPLATE.hpp  cello.ci  cello.cpp  cello.h  cello.hpp  cello_config.def  cello_functions.cpp  cello_global.cpp  cello_global.hpp  cello_macros.hpp  cello_precision.cpp  cello_precision.hpp  classes.text  components.text  config.def  core-classes.text  doxygen.css  edit  enzo-p.ci  enzo-p.cpp  (+11 more)
src/Amr/: Makefile  SConscript  amr.dir  amr.hpp  amr_amr.hpp  mesh.dir  mesh.hpp  mesh_mesh.hpp  test_amr.cpp  test_mesh.cpp
src/Analysis/: analysis.dir
src/Array/: Makefile  SConscript  array.cpp  array.dir  array.hpp  array_array.cpp  array_array.hpp  array_array_.hpp  array_array_serial.cpp  array_array_serial.hpp  array_block.hpp  array_layout.cpp  array_layout.hpp  array_scalar_.hpp  array_serial.hpp  block.hpp  test_array.cpp  test_block.cpp  test_layout.cpp
src/Cello/: CMakeLists.txt  N  RPB  RPE  SConscript  SConscript.parallel  SConscript.parameters  SConscript.templates  SConscript.test  _array.hpp  _comm.hpp  _compute.hpp  _control.hpp  _data.hpp  _disk.hpp  _error.hpp  _field.hpp  _io.hpp  _io_Io_common.hpp  _lcaperf.hpp  _main.hpp  _main.hpp.unused  _memory.hpp  _mesh.hpp  _monitor.hpp  _parallel.hpp  _parameters.hpp  _particle.hpp  _performance.hpp  _problem.hpp  _simulation.hpp  _test.hpp  _view.hpp  array.dir  array.hpp  array_CArrCollec.hpp  array_CelloArray.hpp  array_StringIndRdOnlyMap.hpp  cello.cpp  cello.hpp  (+574 more)
src/Control/: Makefile  cello.cpp  control.cpp  control.dir  control.hpp  schedule.cpp  test_control.cpp
src/Data/: SConscript  data.dir  data.hpp  data_DataBlock.hpp  data_DataDescr.cpp  data_DataDescr.hpp  data_data.hpp  mesh_DataDescr.hpp  test_Data.ci  test_Data.cpp  test_data.cpp
src/Disk/: Makefile  SConscript  disk.dir  disk.hpp  disk_DiskFile.cpp  disk_DiskFile.hpp  disk_File.cpp  disk_File.hpp  disk_FileHdf5.cpp  disk_FileHdf5.hpp  disk_FileIfrit.cpp  disk_FileIfrit.hpp  disk_FilePng.cpp  disk_FilePng.hpp  disk_FilePosix.cpp.new  disk_FilePosix.hpp.new  disk_Hdf5.cpp  disk_Hdf5.hpp  disk_Ifrit.cpp  disk_Ifrit.hpp  disk_hdf5.cpp  disk_hdf5.hpp  disk_hdf5_.hpp  disk_ifrit.cpp  disk_ifrit.hpp  hdf5.cpp  test_FileHdf5.ci  test_FileHdf5.cpp  test_FileIfrit.ci  test_FileIfrit.cpp  test_FilePosix.cpp  test_Hdf5.cpp  test_Ifrit.ci  test_Ifrit.cpp  test_disk_hdf5.cpp  test_disk_ifrit.cpp  test_hdf5.cpp
src/Distribute/: Makefile  distribute.dir
src/Enzo/: .enzo_EnzoMethodRamsesRT.cpp.swp  .enzo_EnzoMethodRamsesRT.hpp.swp  .enzo_EnzoMethodStarMaker.hpp.swp  CMakeLists.txt  CosmologyComputeExpansionFactor.cpp  CosmologyComputeExpansionTimestep.cpp  CosmologyGetUnits.cpp  EnzoMethodHeat.cpp  F  FindField.cpp  FofLib.cpp  FofLib.hpp  Grid_ComputeGammaField.cpp  Grid_ComputePressure.cpp  Grid_ComputePressureDualEnergyFormalism.cpp  Grid_ComputeTemperatureField.cpp  Grid_ComputeTimeStep_PPM.cpp  Grid_ComputeTimeStep_PPML.cpp  Grid_IdentifyPhysicalQuantities.cpp  Grid_IdentifySpeciesFields.cpp  Grid_SetExternalBoundaryValues.cpp  Grid_SetMinimumSupport.cpp  Grid_SolveHydroEquations.cpp  Grid_SolveMHDEquations.cpp  L  MethodEnzoPpm.ci  PPML_Conservative.F  PPML_HLLD.F  PPML_IG_Conservative.F  PPML_IG_HLLD.F  PPML_IG_MAIN.F  PPML_IG_OUforcing.F  PPML_IG_OUforcing.h  PPML_IG_Primitive.F  PPML_IG_TimeStep.F  PPML_IG_calc_dt.F  PPML_IG_monot.F  PPML_IG_potokx.F  PPML_IG_potoky.F  PPML_IG_potokz.F  (+505 more)
src/Enzo3/: CosmologyComputeExpansionFactor.C  Grid_ComputeGammaField.C  Grid_IdentifyColourFields.C  Grid_IdentifyGloverSpeciesFields.C  Grid_IdentifyShockSpeciesFields.C  Grid_MHDTurbulenceInitializeGrid.C  Grid_MHD_Curl.C  Grid_SetMinimumSupport.C  Grid_SolveHydroEquations.C  Grid_SolveMHDEquations.C  Grid_SolveMHD_Li.C  Grid_SolvePPM_DE.C  Grid_ZeusSolver.C  SConscript
src/Error/: Makefile  SConscript  error.dir  error.hpp  error_Error.cpp  error_Error.hpp  error_Exception.hpp  error_error.cpp  error_error.hpp  error_exception.hpp  test_Error.ci  test_Error.cpp  test_error.cpp
src/Field/: Makefile  SConscript  field.dir  field.hpp  field_Array.cpp  field_Array.hpp  field_FacesGroup.hpp  field_FieldBlock.cpp  field_FieldBlock.hpp  field_FieldBlockFaces.cpp  field_FieldBlockFaces.hpp  field_FieldDescr.cpp  field_FieldDescr.hpp  field_FieldFace.cpp  field_FieldFace.hpp  field_FieldFaces.cpp  field_FieldFaces.hpp  field_FieldGhosts.cpp  field_FieldGhosts.hpp  field_ItField.hpp  field_ItFieldList.hpp  field_ItFieldRange.hpp  field_Output.cpp  field_Output.hpp  field_OutputImage.cpp  field_OutputImage.hpp  field_Schedule.cpp  field_Schedule.hpp  field_field.cpp  field_field.hpp  old_field_Array.cpp  old_field_Array.hpp  test_Array.cpp  test_Block.cpp  test_Field.cpp  test_FieldBlock.ci  test_FieldBlock.cpp  test_FieldBlockFaces.ci  test_FieldBlockFaces.cpp  test_FieldDescr.ci  (+10 more)
src/Global/: SConscript  global.hpp  global_Global.hpp
src/Io/: SConscript  io.dir  io.hpp  io_Image.cpp  io_Image.hpp  io_Io.cpp  io_Io.cpp.backup  io_Io.hpp  io_IoBlock.cpp  io_IoBlock.hpp  io_IoField.cpp.backup  io_IoField.hpp  io_IoField.hpp.backup  io_IoFieldBlock.cpp  io_IoFieldBlock.hpp  io_IoHierarchy.cpp  io_IoHierarchy.hpp  io_IoPatch.cpp  (+28 more)
(+3350 files in other folders)
